fix: remove vercel cron to support hobby plan, rely on github actions

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-    "crons": [
-        {
-            "path": "/api/miner/execute",
-            "schedule": "* * * * *"
+    "functions": {
+        "src/app/api/**/*": {
+            "maxDuration": 60
         }
-    ]
+    }
 }
