--- a/.github/workflows/cron_mining.yml
+++ b/.github/workflows/cron_mining.yml
@@ -2,7 +2,7 @@ name: Mining Cron Job
 
 on:
   schedule:
-    - cron: '*/30 * * * *' # Runs every 30 minutes to save GitHub Action minutes (Free Tier limit: ~2000 mins/mo)
+    - cron: '*/10 * * * *' # Runs every 10 minutes
   workflow_dispatch: # Allows manual run from Actions tab
 
 jobs:
